manifests/base/resources/transport/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: transport
    chart: transport-1.3.3
    heritage: Helm
    release: transport
  name: transport
spec:
  ports:
  - name: transport
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: transport
    release: transport
  type: ClusterIP
---
