manifests/base/resources/transport/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://transport-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: transport
    chart: transport-1.3.3
    heritage: Helm
    release: transport
  name: transport
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: transport
          servicePort: 8080
        path: /api/v1/transport
---
